# cppsocket

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cppcheck_report.txt  cppsocket.pc.in  cppsocketConfig.cmake.in
.github/workflows/: addressSanitization.yml  ci.yml  clang-tidy.yml  clang.yml  cmake.yml  codeql.yml  coverage.yml  cppcheck.yml  linter.yml  linux.yml  profile.yml  windows.yaml  windows.yml
inc/: cppsocket.hpp
test/: CMakeLists.txt  TestCppSocket.cpp  Testcppsocket.cpp
